wmBiff (0.2r)
  * wmbiff/Makefile: little cosmetic changes.
  * wmbiff/wmbiff.c: if a pop3 or imap mailbox read fails and the following
    reads are successful but no mail was in the server, the given mailbox
    would remain reading "XX". Now it updates the counter no matter what the
    read was (Mark Hurley).
  * wmbiff/mboxClient.c: wmbiff would only count as new mails those with "N"
    flags, ignoring those marked "ON" (Rob Funk).
  * wmbiff/Imap4Client.c: fixed reading of quoted imap folders, which some
    IMAPd's do (Rob Funk).

 -- Jordi Mallach <jordi@sindominio.net>  Fri,  4 May 2001 13:01:14 +0200

wmBiff (0.2q1)
  * wmbiff/Client.h: move DEBUG_* macros to wmbiff/Makefile
  * wmbiff/Pop3Client.c:
    + My password contains an  @  character.  This causes
      the pop3 line to be incorrectly parsed by wmbiff.
      * Drop all of the ":" after the pop3 and delimit all values with
        spaces.  This works well, as passwords/user-id's all agree that
        the space is a non-legit value.
         
        Example: assume my password is:  myEmailhasa@init
         
        Old way:
        path.3=pop3:debian4tux:myEmailhasa@init@mail.telocity.com

        New way:
        path.3=pop3:debian4tux myEmailhasa@init mail.telcoity.com
        
        Ahh...before you say it.  "Backward compatibility?" You will
        also find in the patch, a NEW function.  So that the OLD and
        NEW way is easily compatible with all ".wmbiffrc" files.
        
        Dev. Comments:
        This was not the cleanest way to implement it, but I had to
        suffice with a clean/quick implementation.  I originally wrote
        one function to handle past and new parsing.  However, I
        thought it would be beneficial to leave them separated, so we
        could eventually drop the old method?
        
        Related Changes:
        The man page will need to be updated (not provided in patch).