@@ -1,0 +1,42 @@
+//include <stdio.h>
+#include <stdlib.h>
+//include <ctype.h>
+
+#include "charutil.h"
+
+inline int LeftTrim(char *psValue)
+{
+
+	char *psTmp = psValue;
+
+	while (*psTmp == ' ' || *psTmp == '\t')
+		psTmp++;
+
+	strcpy(psValue, psTmp);
+
+	return EXIT_SUCCESS;
+}
+
+inline int RightTrim(char *psValue)
+{
+
+	long lLength = strlen(psValue) - 1;
+
+	while ((psValue[lLength] == ' ' || psValue[lLength] == '\t')
+		   && *psValue) {
+		lLength--;
+	}
+
+	psValue[++lLength] = '\000';
+	return EXIT_SUCCESS;
+}
+
+inline int FullTrim(char *psValue)
+{
+
+	if (LeftTrim(psValue) != 0)
+		return EXIT_FAILURE;
+	if (RightTrim(psValue) != 0)
+		return EXIT_FAILURE;
+	return EXIT_SUCCESS;
+}
