@@ -1,0 +1,14 @@
+/* Author: Mark Hurley  (debian4tux@telocity.com)
+ *
+ * Simple char util's to trim char string arrays
+ *
+ */
+
+#ifndef CHARUTIL
+#define CHARUTIL
+
+inline int LeftTrim(char *psValue);
+inline int RightTrim(char *psValue);
+inline int FullTrim(char *psValue);
+
+#endif
