@@ -1,5 +1,13 @@
-wmBiff (0.2r)
-  * wmbiff/Makefile: little cosmetic changes.
+wmBiff (0.3.0)
+  * wmbiff/Makefile:
+    + added charutil.o to OBJS (Mark Hurley).
+    + little cosmetic changes and remove wmbiff-master.xpm.
+  * wmbiff/Imap4Client.c: removed two unused variables in imap4CheckMail
+    (Mark Hurley).
+  * wmbiff/charutil.c: added for TrimLeft, TrimRight, TrimFull (also .h)
+    (Mark Hurley).
+  * wmbiff/wmbiff.c: [ReadLine] removed previous trim leading spaces, added
+    TrimFull.  Fixes Debian Bug #95849 (Mark Hurley).
   * wmbiff/wmbiff.c: if a pop3 or imap mailbox read fails and the following
     reads are successful but no mail was in the server, the given mailbox
     would remain reading "XX". Now it updates the counter no matter what the
@@ -9,7 +17,7 @@ wmBiff (0.2r)
   * wmbiff/Imap4Client.c: fixed reading of quoted imap folders, which some
     IMAPd's do (Rob Funk).
 
- -- Jordi Mallach <jordi@sindominio.net>  Fri,  4 May 2001 13:01:14 +0200
+ -- Jordi Mallach <jordi@sindominio.net>  Fri,  11 May 2001 17:02:44 +0200
 
 wmBiff (0.2q1)
   * wmbiff/Client.h: move DEBUG_* macros to wmbiff/Makefile
